Spacing fixed on contact page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,6 +62,7 @@ footer {
 .form-container {
     border-radius: 10px;
     border: 1px solid rgba(0, 0, 0, .125);
+    height: 100%;
 }
 
 .textinput {
@@ -120,6 +121,19 @@ footer {
 .facebook a:hover {
     text-decoration: none;
 }
+
+.contact-info {
+    font-weight: 500;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.contact-info i {
+    color: rgb(90, 89, 89);
+    padding: 5px;
+}
+
+
 
 body {
     height: 100%;
